sUpdate Fro Question 4 to 6

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mac and Windows</title>
+</head>
+<body>
+    <h1>Welcome to our Page! </h1>
+
+    <h3>Apple</h3>
+    <p>Apple was founded as Apple Computer Company on April 1, 1976, by Steve Wozniak,
+         Steve Jobs(1955–2011) and Ronald
+         Wayne to develop and sell Wozniak's Apple I  </p>
+    <ol>
+        <li>Macbook Pro</li>
+        <li>Macbook Air</li>
+        <li>Macintoch</li>
+    </ol>
+    <h3>Windows </h3>
+    <p>A laptop PC powered by Microsoft Windows offers several advantages123. These include:
+
+        Compatibility with just about any app, browser, 
+        and options that include native games, 
+        utilities, apps, and antivirus programs1.</p>
+
+    <ol>
+        <li>HP</li>
+        <li>Lenovo</li>
+        <li>Asus</li>
+    </ol>
+</body>
+</html>
